--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "simple, dependency-free canvas chart",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint index.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/mapbox/canvas-linechart/issues"
   },
-  "homepage": "https://github.com/mapbox/canvas-linechart"
+  "homepage": "https://github.com/mapbox/canvas-linechart",
+  "dependencies": {
+    "defined": "^1.0.0",
+    "eslint": "^1.5.0"
+  }
 }
