--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "browserify": "^11.1.0",
     "btoa": "^1.1.2",
+    "concat-stream": "^1.5.0",
     "image-equal": "^1.1.0",
     "smokestack": "^3.3.1",
     "tap": "^1.4.1",
