--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "dependencies": {
     "clamp": "^1.0.1",
     "defined": "^1.0.0",
-    "eslint": "^1.5.0"
+    "eslint": "^1.5.0",
+    "simple-linear-scale": "^1.0.1",
+    "xtend": "^4.0.0"
   },
   "devDependencies": {
     "browserify": "^11.1.0",
