--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint index.js",
+    "docs": "documentation index.js -f md > API.md",
     "test": "npm run lint && tap test/test.js"
   },
   "repository": {
@@ -33,6 +34,7 @@
     "browserify": "^11.1.0",
     "btoa": "^1.1.2",
     "concat-stream": "^1.5.0",
+    "documentation": "^2.0.1",
     "image-equal": "^1.1.0",
     "smokestack": "^3.3.1",
     "tap": "^1.4.1",
